--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb\n",
+    "import seaborn as sn\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "4          Male                     Yes  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "(183412, 16)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -666,22 +666,22 @@
       "Data columns (total 16 columns):\n",
       " #   Column                   Non-Null Count   Dtype         \n",
       "---  ------                   --------------   -----         \n",
-      " 0   start_time               183412 non-null  datetime64[ns]\n",
-      " 1   end_time                 183412 non-null  datetime64[ns]\n",
-      " 2   start_station_id         183412 non-null  object        \n",
-      " 3   start_station_name       183412 non-null  object        \n",
-      " 4   start_station_latitude   183412 non-null  float64       \n",
-      " 5   start_station_longitude  183412 non-null  float64       \n",
-      " 6   end_station_id           183412 non-null  object        \n",
-      " 7   end_station_name         183412 non-null  object        \n",
-      " 8   end_station_latitude     183412 non-null  float64       \n",
-      " 9   end_station_longitude    183412 non-null  float64       \n",
-      " 10  bike_id                  183412 non-null  object        \n",
-      " 11  user_type                183412 non-null  category      \n",
-      " 12  member_birth_year        183412 non-null  float64       \n",
-      " 13  member_gender            183412 non-null  category      \n",
-      " 14  bike_share_for_all_trip  183412 non-null  object        \n",
-      " 15  duration_min             183412 non-null  int64         \n",
+      " 0   duration_sec             183412 non-null  int64         \n",
+      " 1   start_time               183412 non-null  datetime64[ns]\n",
+      " 2   end_time                 183412 non-null  datetime64[ns]\n",
+      " 3   start_station_id         183412 non-null  object        \n",
+      " 4   start_station_name       183412 non-null  object        \n",
+      " 5   start_station_latitude   183412 non-null  float64       \n",
+      " 6   start_station_longitude  183412 non-null  float64       \n",
+      " 7   end_station_id           183412 non-null  object        \n",
+      " 8   end_station_name         183412 non-null  object        \n",
+      " 9   end_station_latitude     183412 non-null  float64       \n",
+      " 10  end_station_longitude    183412 non-null  float64       \n",
+      " 11  bike_id                  183412 non-null  object        \n",
+      " 12  user_type                183412 non-null  category      \n",
+      " 13  member_birth_year        183412 non-null  float64       \n",
+      " 14  member_gender            183412 non-null  category      \n",
+      " 15  bike_share_for_all_trip  183412 non-null  object        \n",
       "dtypes: category(2), datetime64[ns](2), float64(5), int64(1), object(6)\n",
       "memory usage: 19.9+ MB\n"
      ]
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "Name: member_age, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,13 +855,173 @@
     "df['hour'] = df['start_time'] .dt.strftime('%H')\n",
     "\n",
     "# Getting days from start time\n",
-    "df['start_day']"
+    "df['start_day'] = df['start_time'] .dt.strftime('%A')\n",
+    "\n",
+    "df['start_month'] = df['start_time'] .dt.strftime('%B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['February'], dtype=object)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.start_month.unique()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Based on the information above, all the trips were recored in February 2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 183337 entries, 0 to 183411\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                   Non-Null Count   Dtype         \n",
+      "---  ------                   --------------   -----         \n",
+      " 0   start_time               183337 non-null  datetime64[ns]\n",
+      " 1   end_time                 183337 non-null  datetime64[ns]\n",
+      " 2   start_station_id         183337 non-null  object        \n",
+      " 3   start_station_name       183337 non-null  object        \n",
+      " 4   start_station_latitude   183337 non-null  float64       \n",
+      " 5   start_station_longitude  183337 non-null  float64       \n",
+      " 6   end_station_id           183337 non-null  object        \n",
+      " 7   end_station_name         183337 non-null  object        \n",
+      " 8   end_station_latitude     183337 non-null  float64       \n",
+      " 9   end_station_longitude    183337 non-null  float64       \n",
+      " 10  bike_id                  183337 non-null  object        \n",
+      " 11  user_type                183337 non-null  category      \n",
+      " 12  member_gender            183337 non-null  category      \n",
+      " 13  bike_share_for_all_trip  183337 non-null  object        \n",
+      " 14  duration_min             183337 non-null  int64         \n",
+      " 15  member_age               183337 non-null  int64         \n",
+      " 16  hour                     183337 non-null  object        \n",
+      " 17  start_day                183337 non-null  object        \n",
+      " 18  start_month              183337 non-null  object        \n",
+      "dtypes: category(2), datetime64[ns](2), float64(4), int64(2), object(9)\n",
+      "memory usage: 25.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are  329  stations in the dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking station\n",
+    "\n",
+    "num_stations = df['start_station_name'].nunique()\n",
+    "\n",
+    "print(\"There are \", num_stations, \" stations in the dataset\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 183337 entries, 0 to 183411\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                   Non-Null Count   Dtype         \n",
+      "---  ------                   --------------   -----         \n",
+      " 0   start_time               183337 non-null  datetime64[ns]\n",
+      " 1   end_time                 183337 non-null  datetime64[ns]\n",
+      " 2   start_station_id         183337 non-null  object        \n",
+      " 3   start_station_name       183337 non-null  object        \n",
+      " 4   start_station_latitude   183337 non-null  float64       \n",
+      " 5   start_station_longitude  183337 non-null  float64       \n",
+      " 6   end_station_id           183337 non-null  object        \n",
+      " 7   end_station_name         183337 non-null  object        \n",
+      " 8   end_station_latitude     183337 non-null  float64       \n",
+      " 9   end_station_longitude    183337 non-null  float64       \n",
+      " 10  bike_id                  183337 non-null  object        \n",
+      " 11  user_type                183337 non-null  category      \n",
+      " 12  member_gender            183337 non-null  category      \n",
+      " 13  bike_share_for_all_trip  183337 non-null  object        \n",
+      " 14  duration_min             183337 non-null  int64         \n",
+      " 15  member_age               183337 non-null  int64         \n",
+      " 16  hour                     183337 non-null  object        \n",
+      " 17  start_day                183337 non-null  object        \n",
+      " 18  start_month              183337 non-null  object        \n",
+      "dtypes: category(2), datetime64[ns](2), float64(4), int64(2), object(9)\n",
+      "memory usage: 25.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(183337, 19)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### After the data wrangling, and feature engineering, \n",
+    "\n",
+    ">- There are 183337 rows and 19 columns in the dataset. <br><br>\n",
+    ">- start_station_id, end_station_id, bike_id have been converted from int to strings.<br><br>\n",
+    ">- The start_time has been broken into start_hour, start_day and start_month.<br><br>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -871,9 +1031,9 @@
     }
    },
    "source": [
-    "## (Visualization 1)\n",
+    "## Univariate Exploratory Data Analysis\n",
     "\n",
-    "> Write a comment about your visualization here. The visualization should be in the next cell, as a sub-slide type. Make sure your visualizations are polished!\n",
+    "> In this session, I will explore  the duration_min, member's age and the start time from the dataset.\n",
     "\n",
     "> **Rubric Tip**: Provide at least 3 **polished** visualizations to convey key insights. The total number of visualizations in the slideshow shoould be less than 50% of the number of visualizations in the exploratory analysis. For example, if the exploratory analysis (Part I) has 18 visualizations, the slideshow can have (3 - 8) visualizations. \n",
     "\n",
@@ -884,13 +1044,6 @@
     "> **Rubric Tip**: All plots in the slideshow are appropriate, meaning the plot type, encodings, and transformations are suitable to the underlying data. \n",
     "\n",
     "> **Rubric Tip**: All plots in the slideshow are polished, meaning all plots have a title, labeled x/y axes (with units), x/y ticks, and legends. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I willl start off with univariate distribution and visualize the relationship between variables."
    ]
   },
   {
@@ -970,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
