Multivariate Data Analysis

--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1262,7 +1262,7 @@
     }
    },
    "source": [
-    "## (Visualization 2)\n",
+    "## Bivariate Data Analysis\n",
     "\n",
     "> You should have at least three visualizations in your presentation,\n",
     "but feel free to add more if you'd like!"
@@ -1507,11 +1507,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Both male and females age ranges have the same median age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions from Exploratory Data Analysis II\n",
+    "\n",
+    "> The median ages of both male and females are identical. <br><br>\n",
+    "> Most people people to go for a bike trip  on the weekends: Majority of the bike trips occur on Sunday, followed by Saturday. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1521,7 +1531,9 @@
     }
    },
    "source": [
-    "## (Visualization 3)\n",
+    "## Multivariate Data Analysis\n",
+    "\n",
+    ">- Create a graph consisting of tree or more variables to investigate the dataset\n",
     "\n"
    ]
   },
