--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1637,6 +1637,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Investigations from Multivariate Data Analysis\n",
+    "\n",
+    ">- The \"other\" category seems to outnumber the males and females in all the multivariate data analysis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary"
    ]
   },
@@ -1644,11 +1653,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Renting a bike is very popular among subscribers rather than customers which may point to special rates or free rides for subscribed users.\n",
-    "Short trips for both subscribers and customers are favored which show how much they are convenient and beneficial for commuting around the city.\n",
-    "The 'Other' gender seems to be much more active along weekdays although most of our users are of male gender.\n",
-    "Sunday is the most active day among the three genders we have.\n",
-    "Market St and San Francisco Caltrain Station 2 are the two most stations used by Subscribers to rent bikes."
+    "* Bike rentals is prominent among subscribers rather than customers. This implies, subscribers gets discounts or special rates.\n",
+    "\n",
+    "* Both subscribers and customers often go a short trip. It seems to be common in the area. \n",
+    "\n",
+    "* The \"Other\" gender, after the multivariate data analysis seems to be more active in bike rentals than males and females.\n",
+    "\n"
    ]
   },
   {
@@ -1665,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
