--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1264,7 +1264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the year of birth, I got the recent ages of the users by subtracting their birth years from the 2022. Surprisingly, "
+    "With the year of birth, I got the recent ages of the users by subtracting their birth years from the 2022. Surprisingly, 75 users were above 100 years, which was abnormal."
    ]
   },
   {
