--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1250,7 +1250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The duration of trips take huge amount of values and is denser at the left. So, I looked at it in log transform and found that peak occurs at 600 seconds starting from 0 and then distribution starts to drop and does not regain any more peak value."
+    ">- The duration of trips take huge amount of values and is denser at the left. So, I looked at it in log transform and found that peak occurs at 600 seconds starting from 0 and then distribution starts to drop and does not regain any more peak value."
    ]
   },
   {
@@ -1264,7 +1264,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the year of birth, I got the recent ages of the users by subtracting their birth years from the 2022. Surprisingly, 75 users were above 100 years, which was abnormal."
+    ">- With the year of birth, I got the recent ages of the users by subtracting their birth years from the 2022. Surprisingly, 75 users were above 100 years, which was abnormal.\n",
+    "<br><br>\n",
+    ">- I separated the start_time into days, hours and months for better insights in the data.\n",
+    "\n",
+    ">- "
    ]
   },
   {
