done with questions.

--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1265,31 +1265,19 @@
    "metadata": {},
    "source": [
     ">- With the year of birth, I got the recent ages of the users by subtracting their birth years from the 2022. Surprisingly, 75 users were above 100 years, which was abnormal.\n",
-    "<br><br>\n",
+    "\n",
     ">- I separated the start_time into days, hours and months for better insights in the data.\n",
     "\n",
-    ">- "
+    ">- Most of the trip durations took less than 10 minutes. I think majority of the users needed the bikes for a short distance. \n",
+    "\n",
+    ">- Finally, I converted the seconds into minutes in order to make it easy fto work with."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Unsual Analysis from the Univariate Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Most of the trip durations took less than 10 minutes. I think majority of the users needed the bikes for a short distance. "
    ]
   },
   {
@@ -1556,10 +1544,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions from Exploratory Data Analysis II\n",
+    "#### How did the feature(s) of interest vary with other features in the dataset?\n",
+    "\n",
     "\n",
     "> The median ages of both male and females are identical. <br><br>\n",
-    "> Most people people to go for a bike trip  on the weekends: Majority of the bike trips occur on Sunday, followed by Saturday. "
+    "> Most people people to go for a bike trip  on the weekends: Majority of the bike trips occur on Sunday, followed by Saturday.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Talk about some of the relationships you observed in this part of the investigation. How did the feature(s) of interest vary with other features in the dataset?\n",
+    "\n",
+    ">- The age group with most average trips are 21 and 77 years. \n",
+    ">- There is a vast difference in the number of subscribers and customers. "
    ]
   },
   {
@@ -1676,9 +1675,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Investigations from Multivariate Data Analysis\n",
+    "#### Were there features that strengthened each other?\n",
     "\n",
-    ">- The \"other\" category seems to outnumber the males and females in all the multivariate data analysis. "
+    ">- The \"other\" category seems to outnumber the males and females during the Weekdays. Also, most  rentals occurs on Sundays, followed by Saturday."
    ]
   },
   {
