done with analysis

--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1724,13 +1724,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: line 1: Part_II_Filename: No such file or directory\n"
+      "[NbConvertApp] Converting notebook notebook.ipynb to slides\n",
+      "[NbConvertApp] Writing 1058208 bytes to notebook.slides.html\n",
+      "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
+      "Serving your slides at http://127.0.0.1:8000/notebook.slides.html\n",
+      "Use Control-C to stop this server\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.89ms\n"
      ]
     }
    ],
    "source": [
     "# Use this command if you are running this file in local\n",
-    "!jupyter nbconvert <Part_II_Filename>.ipynb --to slides --post serve --no-input --no-prompt"
+    "!jupyter nbconvert notebook.ipynb --to slides --post serve --no-input --no-prompt"
    ]
   },
   {
