--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1729,7 +1729,10 @@
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/notebook.slides.html\n",
       "Use Control-C to stop this server\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.89ms\n"
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.89ms\n",
+      "^C\n",
+      "\n",
+      "Interrupted\n"
      ]
     }
    ],
