--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1168,6 +1168,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From chart above, majority of the users between the ages of 30 and 40 years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Which duration range occurs most frequently "
    ]
   },
@@ -1206,7 +1213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Who are the major users? Is it customers or subscribers?"
+    "Who are the major users bikes? Is it customers or subscribers?"
    ]
   },
   {
@@ -1275,13 +1282,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Unsual Analysis from the Univariate Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1289,10 +1289,7 @@
     }
    },
    "source": [
-    "## Bivariate Data Analysis\n",
-    "\n",
-    "> You should have at least three visualizations in your presentation,\n",
-    "but feel free to add more if you'd like!"
+    "## Bivariate Data Analysis\n"
    ]
   },
   {
@@ -1350,7 +1347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Which the trip duration of each age group "
+    "#### Which the trip duration of each age group?"
    ]
   },
   {
