15 charts in notebook

--- a/Project 3/Part_II_slide_deck_template.ipynb
+++ b/Project 3/Part_II_slide_deck_template.ipynb
@@ -32,12 +32,12 @@
     "\n",
     "## Dataset Overview\n",
     "\n",
-    "> Provide a brief overview of the dataset to be presented here."
+    "> This dataset provides information about individual rides made in a bike-sharing system in the San Francisco Bay Area. The dataset has 183412 rows and 16 columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -68,7 +68,8 @@
    },
    "outputs": [],
    "source": [
-    "# load in the dataset into a pandas dataframe\n"
+    "# load in the dataset into a pandas dataframe\n",
+    "df = pd.read_csv(\"/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project 3/201902-fordgobike-tripdata.csv\")"
    ]
   },
   {
