--- a/Project 3/Part_II_slide_deck_template.ipynb
+++ b/Project 3/Part_II_slide_deck_template.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -49,7 +49,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb\n",
+    "import seaborn as sn\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -70,6 +70,107 @@
    "source": [
     "# load in the dataset into a pandas dataframe\n",
     "df = pd.read_csv(\"/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project 3/201902-fordgobike-tripdata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Wrangling and Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['start_station_id', 'end_station_id', 'member_birth_year', 'member_gender' , 'end_station_name', 'start_station_name']:\n",
+    "    df[col] = df[col].fillna(df[col].mode()[0])\n",
+    "    \n",
+    "df['member_gender'] = df['member_gender'].fillna(\"Male\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert start_time and end_time to datetime format\n",
+    "df.start_time = pd.to_datetime(df. start_time)\n",
+    "df.end_time = pd.to_datetime(df.end_time)\n",
+    "\n",
+    "# convert the start_station_id and end_stattion_id to strings\n",
+    "df.start_station_id = df.start_station_id.astype(str)\n",
+    "\n",
+    "df.end_station_id = df.end_station_id.astype(str)\n",
+    "\n",
+    "# convert the bike_id to string\n",
+    "df.bike_id = df.bike_id.astype(str)\n",
+    "\n",
+    "# convert the user type and member_gender to categories\n",
+    "df.user_type = df.user_type.astype('category')\n",
+    "\n",
+    "df.member_gender = df.member_gender.astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['member_age'] = 2021 - df['member_birth_year']\n",
+    "\n",
+    "# converting member age from float to int\n",
+    "\n",
+    "df['member_age'] = df['member_age'].astype(int)\n",
+    "\n",
+    "df.drop(columns=['member_birth_year'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of members with ages greater than 100 are   75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking for ages abover 100 years\n",
+    "abnormal_ages = df.query('member_age > 100')\n",
+    "print(\"The number of members with ages greater than 100 are  \", abnormal_ages.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['member_age'] < 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting hours from start time\n",
+    "df['start_hour'] = df['start_time'] .dt.strftime('%H')\n",
+    "\n",
+    "# Getting days from start time\n",
+    "df['start_day'] = df['start_time'] .dt.strftime('%A')\n",
+    "\n",
+    "df['start_month'] = df['start_time'] .dt.strftime('%B')"
    ]
   },
   {
@@ -92,7 +193,7 @@
     }
    },
    "source": [
-    "## (Visualization 1)\n",
+    "## Univariate Data Analysis\n",
     "\n",
     "> Write a comment about your visualization here. The visualization should be in the next cell, as a sub-slide type. Make sure your visualizations are polished!\n",
     "\n",
@@ -108,22 +209,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "source": [
+    "Most people rented bikes on the Thursday. The total amount of bikes rented on the Thursday was 35000. This is followed by Tuesday, which amount a total of over 31000 rentals. On Friday,  a total amout of approximately 29000 rentals were made. The least of the rentals were made on Sunday and Saturday."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -140,6 +268,13 @@
     "> You should have at least three visualizations in your presentation,\n",
     "but feel free to add more if you'd like!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -189,13 +324,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: Part_II_Filename: No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this command if you are running this file in local\n",
     "!jupyter nbconvert <Part_II_Filename>.ipynb --to slides --post serve --no-input --no-prompt"
