--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -1821,16 +1821,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook notebook.ipynb to slides\n",
+      "[NbConvertApp] Writing 1176658 bytes to notebook.slides.html\n",
+      "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
+      "Serving your slides at http://127.0.0.1:8000/notebook.slides.html\n",
+      "Use Control-C to stop this server\n",
+      "^C\n",
+      "\n",
+      "Interrupted\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this command if you are running this file in local\n",
-    "# !jupyter nbconvert notebook.ipynb --to slides --post serve --no-input --no-prompt"
+    "!jupyter nbconvert notebook.ipynb --to slides --post serve --no-input --no-prompt"
    ]
   },
   {
